--- a/about-us.html
+++ b/about-us.html
@@ -18,101 +18,101 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-a{
-text-decoration: none!important;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 ul{
 list-style: circle;
 }
-.navbar a{
-font-size: 17.9px!important;
-font-weight: bold;
+.aec6e8828e22cccced3e242cd2bae6ede a{
+font-size:16px;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.btn-md{
+padding: 14.9px 29.9px;
+border-radius: 0;
 }
-footer{
-background:#0e0e0e;
-color:#ffffff;
+footer *{
+font-size:16px !important;
+}
+.bb525d668f8003be35ac6abe4831ab29d{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-footer *{
-font-size:16px !important;
+.navbar a{
+font-size: 18px!important;
+font-weight: bold;
 }
-.ycaa6533a6d78007d831c085107c6e7e7{
-border: 1px solid #67849235;
-border-radius: 5px;
-padding: 20px 20px;
-background: #fbf9f5;
+.w3c7a2a24db25d0f26e016da8d8a84c22 a,.aec6e8828e22cccced3e242cd2bae6ede a{
+color:#010101!important;
+text-decoration: underline !important;
+}
+.aec6e8828e22cccced3e242cd2bae6ede p,.aec6e8828e22cccced3e242cd2bae6ede span,.aec6e8828e22cccced3e242cd2bae6ede label{
+font-size:16px!important;
 }
 .nav-item{
-padding-left:8.3px;
-padding-right:7.8px;
-padding-top:4.8px;
-padding-bottom:5.3px;
+padding-left:7.5px;
+padding-right:7.6px;
+padding-top:4.5px;
+padding-bottom:4.5px;
+}
+.v9e353b4ba807898a1284769f8feabfc0{
+border: 1px solid #6f8c9a3d;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f2f0ec;
+}
+footer{
+background:#131313;
+color:#ffffff;
 }
 html{
 scroll-behavior: smooth;
 }
-.bea7625377eff18a666eb3eea4522f1bd{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.c3f7045b0b21f1bd8c920be00ff733d8f p,.c3f7045b0b21f1bd8c920be00ff733d8f span,.c3f7045b0b21f1bd8c920be00ff733d8f label{
+.w3c7a2a24db25d0f26e016da8d8a84c22 p,.w3c7a2a24db25d0f26e016da8d8a84c22 a,.w3c7a2a24db25d0f26e016da8d8a84c22 span,.w3c7a2a24db25d0f26e016da8d8a84c22 label{
 font-size:16px!important;
+}
+.we433e9b2dad2527a9f55a416b9eb05d1:hover{
+box-shadow: 0 50.4px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 .nav-link{
 color: #000000!important;
 
 }
-.dad9f9d335832a16b07b20db97b6d7abe p,.dad9f9d335832a16b07b20db97b6d7abe a,.dad9f9d335832a16b07b20db97b6d7abe span,.dad9f9d335832a16b07b20db97b6d7abe label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 15.5px 30.5px;
-border-radius: 0;
-}
-.dad9f9d335832a16b07b20db97b6d7abe a,.c3f7045b0b21f1bd8c920be00ff733d8f a{
-color:#040404!important;
-text-decoration: underline !important;
-}
-.x67dcafd311b67a10c7f0e0f1334714ef:hover{
-box-shadow: 0 50.3px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.c3f7045b0b21f1bd8c920be00ff733d8f a{
-font-size:16px;
+a{
+text-decoration: none!important;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
-<a class="nav-link tf8710c8336893b5a48df85d32a8f2a88" href="index.html" >plumbing quotes</a>
+<ul class="align-items-center d-flex ml-auto navbar-nav"><li class="nav-item">
+<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="tf8710c8336893b5a48df85d32a8f2a88 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link x4bb451108d3ca18e7931e11e4baecbfb" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link tf8710c8336893b5a48df85d32a8f2a88" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="tf8710c8336893b5a48df85d32a8f2a88 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="nav-link tf8710c8336893b5a48df85d32a8f2a88 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<li class="dropdown nav-item">
+<a class="dropdown-toggle x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="tf8710c8336893b5a48df85d32a8f2a88 nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-size:16px;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 ycaa6533a6d78007d831c085107c6e7e7">
+<div class="col-md-12 mb-3 v9e353b4ba807898a1284769f8feabfc0">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="tf8710c8336893b5a48df85d32a8f2a88" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="tf8710c8336893b5a48df85d32a8f2a88" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="tf8710c8336893b5a48df85d32a8f2a88" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="tf8710c8336893b5a48df85d32a8f2a88" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="x4bb451108d3ca18e7931e11e4baecbfb" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="ea23cdb713393df236b782d3c65e32659 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest ea23cdb713393df236b782d3c65e32659" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="ea23cdb713393df236b782d3c65e32659 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter ea23cdb713393df236b782d3c65e32659" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="fb9f6be0be151da707c12a28eb99c8bb3 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="fb9f6be0be151da707c12a28eb99c8bb3 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google fb9f6be0be151da707c12a28eb99c8bb3-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter fb9f6be0be151da707c12a28eb99c8bb3" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
