--- a/sitemap.html
+++ b/sitemap.html
@@ -18,94 +18,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
+footer{
+background:#0b0b0b;
+color:#ffffff;
+}
+ul{
+list-style: circle;
+}
+.de402b6383f7e32c45ea64c05634377aa a{
+font-size:16px;
+}
+.btn-md{
+padding: 15px 29.9px;
+border-radius: 0;
+}
+.tb6e8d90a065ba11fcfbb0539cca36d41:hover{
+box-shadow: 0 49.5px 50.2px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+a{
+text-decoration: none!important;
+}
+.df5c8cef9dbde9edbfe4dc9c60de130a3 a,.de402b6383f7e32c45ea64c05634377aa a{
+color:#0d0d0d!important;
+text-decoration: underline !important;
+}
+.de402b6383f7e32c45ea64c05634377aa p,.de402b6383f7e32c45ea64c05634377aa span,.de402b6383f7e32c45ea64c05634377aa label{
+font-size:16px!important;
+}
 *{
 font-family: 'Kumbh Sans', sans-serif;
+}
+.xe9a459aaf26ad487ddee0b0b2ed0265c{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+html{
+scroll-behavior: smooth;
+}
+.navbar a{
+font-size: 17.6px!important;
+font-weight: bold;
+}
+.df5c8cef9dbde9edbfe4dc9c60de130a3 p,.df5c8cef9dbde9edbfe4dc9c60de130a3 a,.df5c8cef9dbde9edbfe4dc9c60de130a3 span,.df5c8cef9dbde9edbfe4dc9c60de130a3 label{
+font-size:16px!important;
+}
+footer *{
+font-size:16px !important;
+}
+.nav-item{
+padding-left:8.3px;
+padding-right:8.2px;
+padding-top:4.5px;
+padding-bottom:4.9px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-footer{
-background:#0e0e0e;
-color:#ffffff;
-}
-footer *{
-font-size:16px !important;
-}
-.b76a64f57b5c8168f0ef514cf0e9eb3ef a{
-font-size:16px;
-}
-.e3f24a0126c2c304ac249293179d0bdcc a,.b76a64f57b5c8168f0ef514cf0e9eb3ef a{
-color:#111111!important;
-text-decoration: underline !important;
-}
-a{
-text-decoration: none!important;
-}
-.e3f24a0126c2c304ac249293179d0bdcc p,.e3f24a0126c2c304ac249293179d0bdcc a,.e3f24a0126c2c304ac249293179d0bdcc span,.e3f24a0126c2c304ac249293179d0bdcc label{
-font-size:16px!important;
-}
 .nav-link{
 color: #000000!important;
 
 }
-.b76a64f57b5c8168f0ef514cf0e9eb3ef p,.b76a64f57b5c8168f0ef514cf0e9eb3ef span,.b76a64f57b5c8168f0ef514cf0e9eb3ef label{
-font-size:16px!important;
-}
-.btn-md{
-padding: 15.2px 29.6px;
-border-radius: 0;
-}
-.bbccc55c979d29ea9c21d78b3a0d1c363:hover{
-box-shadow: 0 50.4px 49.6px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.nav-item{
-padding-left:8.1px;
-padding-right:8.2px;
-padding-top:4.9px;
-padding-bottom:5.3px;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
-}
-html{
-scroll-behavior: smooth;
-}
-ul{
-list-style: circle;
-}
-.ae587ca271042cbeee0a9fe6079604c43{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
 </style>
 </head>
 <body>
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
-<a class="xeef16284c0efa32efeb604125d0fc67a nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="d-flex align-items-center ml-auto navbar-nav"><li class="nav-item">
+<a class="z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link xeef16284c0efa32efeb604125d0fc67a" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="dropdown-toggle z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link xeef16284c0efa32efeb604125d0fc67a" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ color:#000000!important;
 </div>
 </section>
 <footer>
-<div class="pt-5 container py-4" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="xeef16284c0efa32efeb604125d0fc67a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook v6bda9bb979911239b1aeb51a0e8b3f32" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="v6bda9bb979911239b1aeb51a0e8b3f32 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google v6bda9bb979911239b1aeb51a0e8b3f32-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter v6bda9bb979911239b1aeb51a0e8b3f32" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="f0a113b7446d9e6d718af07540daa3ce5 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest f0a113b7446d9e6d718af07540daa3ce5" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="f0a113b7446d9e6d718af07540daa3ce5 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="f0a113b7446d9e6d718af07540daa3ce5 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
