--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,94 +19,94 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
+.nav-link{
+color: #000000!important;
+
+}
+footer{
+background:#000000;
+color:#ffffff;
+}
+.z2f2db86abefb709b5ef3e59e8d43c450 a{
+font-size:16px;
+}
+.c86f3fc6b937e1ff30f2be25c3eb510b1 p,.c86f3fc6b937e1ff30f2be25c3eb510b1 a,.c86f3fc6b937e1ff30f2be25c3eb510b1 span,.c86f3fc6b937e1ff30f2be25c3eb510b1 label{
+font-size:16px!important;
+}
 .navbar a{
-font-size: 17.8px!important;
+font-size: 18px!important;
 font-weight: bold;
 }
-a{
-text-decoration: none!important;
+.nav-item{
+padding-left:7.7px;
+padding-right:8.5px;
+padding-top:5.5px;
+padding-bottom:4.9px;
 }
-.yab5b92489ae7137f2830e4d39e5eab5e p,.yab5b92489ae7137f2830e4d39e5eab5e a,.yab5b92489ae7137f2830e4d39e5eab5e span,.yab5b92489ae7137f2830e4d39e5eab5e label{
-font-size:16px!important;
+.f058136a709cfa870d51ce53bb0773910:hover{
+box-shadow: 0 50.2px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 html{
 scroll-behavior: smooth;
 }
-.yab5b92489ae7137f2830e4d39e5eab5e a,.b6f1bf0203195d011957d7c24d3790e47 a{
-color:#0a0a0a!important;
+a{
+text-decoration: none!important;
+}
+footer *{
+font-size:16px !important;
+}
+ul{
+list-style: circle;
+}
+.c86f3fc6b937e1ff30f2be25c3eb510b1 a,.z2f2db86abefb709b5ef3e59e8d43c450 a{
+color:#0e0e0e!important;
 text-decoration: underline !important;
+}
+.btn-md{
+padding: 15px 30.1px;
+border-radius: 0;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-footer *{
-font-size:16px !important;
+.z2f2db86abefb709b5ef3e59e8d43c450 p,.z2f2db86abefb709b5ef3e59e8d43c450 span,.z2f2db86abefb709b5ef3e59e8d43c450 label{
+font-size:16px!important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.b6f1bf0203195d011957d7c24d3790e47 a{
-font-size:16px;
-}
-.e532d52e7a8d9499ae4cbfc2006aa1a77:hover{
-box-shadow: 0 50px 50.4px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-footer{
-background:#121212;
-color:#ffffff;
-}
-.wcb8649bd3b25406362be28cc92eb572f{
+.we10605b53c74800c7a6bae324a3530fd{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-ul{
-list-style: circle;
-}
-.b6f1bf0203195d011957d7c24d3790e47 p,.b6f1bf0203195d011957d7c24d3790e47 span,.b6f1bf0203195d011957d7c24d3790e47 label{
-font-size:16px!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.btn-md{
-padding: 15.4px 29.6px;
-border-radius: 0;
-}
-.nav-item{
-padding-left:8px;
-padding-right:8.1px;
-padding-top:5.4px;
-padding-bottom:4.5px;
-}
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
-<a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="index.html" >plumbing quotes</a>
+<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link fd12a32c8f67ef3da7fe04d52a13ba993" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link fd12a32c8f67ef3da7fe04d52a13ba993" href="quote-my-job.html" >quote my job</a>
+<a class="c1d9950f9b8e80714ec7e05bae8b2b960 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="dropdown nav-item">
-<a class="dropdown-toggle fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+<li class="nav-item dropdown">
+<a class="dropdown-toggle nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="container pt-5 py-4" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook bd71b6f7fbfcf95fea99831fab5037e62" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest bd71b6f7fbfcf95fea99831fab5037e62" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="bd71b6f7fbfcf95fea99831fab5037e62 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="bd71b6f7fbfcf95fea99831fab5037e62 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook x86674ba3e567d7f5976d6c604ffd178f" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="x86674ba3e567d7f5976d6c604ffd178f pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google x86674ba3e567d7f5976d6c604ffd178f-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="x86674ba3e567d7f5976d6c604ffd178f twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
