--- a/about-us.html
+++ b/about-us.html
@@ -18,101 +18,101 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-ul{
-list-style: circle;
-}
-.aec6e8828e22cccced3e242cd2bae6ede a{
-font-size:16px;
-}
-.btn-md{
-padding: 14.9px 29.9px;
-border-radius: 0;
-}
-footer *{
-font-size:16px !important;
-}
-.bb525d668f8003be35ac6abe4831ab29d{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
-}
-.w3c7a2a24db25d0f26e016da8d8a84c22 a,.aec6e8828e22cccced3e242cd2bae6ede a{
-color:#010101!important;
-text-decoration: underline !important;
-}
-.aec6e8828e22cccced3e242cd2bae6ede p,.aec6e8828e22cccced3e242cd2bae6ede span,.aec6e8828e22cccced3e242cd2bae6ede label{
-font-size:16px!important;
-}
-.nav-item{
-padding-left:7.5px;
-padding-right:7.6px;
-padding-top:4.5px;
-padding-bottom:4.5px;
-}
-.v9e353b4ba807898a1284769f8feabfc0{
-border: 1px solid #6f8c9a3d;
-border-radius: 5px;
-padding: 20px 20px;
-background: #f2f0ec;
-}
-footer{
-background:#131313;
-color:#ffffff;
-}
-html{
-scroll-behavior: smooth;
-}
-.w3c7a2a24db25d0f26e016da8d8a84c22 p,.w3c7a2a24db25d0f26e016da8d8a84c22 a,.w3c7a2a24db25d0f26e016da8d8a84c22 span,.w3c7a2a24db25d0f26e016da8d8a84c22 label{
-font-size:16px!important;
-}
-.we433e9b2dad2527a9f55a416b9eb05d1:hover{
-box-shadow: 0 50.4px 49.5px -25px rgb(0 0 0 / 30%);
+.xa57d708091f7ff28624574a8ae621008:hover{
+box-shadow: 0 50.2px 50.3px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
 }
 .nav-link{
 color: #000000!important;
 
 }
+html{
+scroll-behavior: smooth;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+ul{
+list-style: circle;
+}
+footer{
+background:#101010;
+color:#ffffff;
+}
+.btn-md{
+padding: 14.7px 30px;
+border-radius: 0;
+}
+.nav-item{
+padding-left:8.3px;
+padding-right:8.3px;
+padding-top:5.4px;
+padding-bottom:4.9px;
+}
 a{
 text-decoration: none!important;
+}
+.z87d148a31ef7295d8eedea0f975ac59e{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.navbar a{
+font-size: 17.9px!important;
+font-weight: bold;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+.ybce0f83dccbdb15139f84c5140a23421 p,.ybce0f83dccbdb15139f84c5140a23421 a,.ybce0f83dccbdb15139f84c5140a23421 span,.ybce0f83dccbdb15139f84c5140a23421 label{
+font-size:16px!important;
+}
+.ybce0f83dccbdb15139f84c5140a23421 a,.u06fef1b087b11a80f653da15bac99c64 a{
+color:#050505!important;
+text-decoration: underline !important;
+}
+footer *{
+font-size:16px !important;
+}
+.u06fef1b087b11a80f653da15bac99c64 a{
+font-size:16px;
+}
+.w987dc39c4465cd1bcdb1f622328a7f13{
+border: 1px solid #66839134;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f5f3ef;
+}
+.u06fef1b087b11a80f653da15bac99c64 p,.u06fef1b087b11a80f653da15bac99c64 span,.u06fef1b087b11a80f653da15bac99c64 label{
+font-size:16px!important;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="align-items-center d-flex ml-auto navbar-nav"><li class="nav-item">
-<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="align-items-center navbar-nav d-flex ml-auto"><li class="nav-item">
+<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x4bb451108d3ca18e7931e11e4baecbfb" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="v22b4d228e0485d06e31a13490ab72fd8 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle x4bb451108d3ca18e7931e11e4baecbfb nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="v22b4d228e0485d06e31a13490ab72fd8 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="x4bb451108d3ca18e7931e11e4baecbfb nav-link" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link v22b4d228e0485d06e31a13490ab72fd8" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ text-decoration: none!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 v9e353b4ba807898a1284769f8feabfc0">
+<div class="col-md-12 mb-3 w987dc39c4465cd1bcdb1f622328a7f13">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -160,19 +160,19 @@ plumber north london</iframe>
 <div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="x4bb451108d3ca18e7931e11e4baecbfb" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="x4bb451108d3ca18e7931e11e4baecbfb" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="v22b4d228e0485d06e31a13490ab72fd8" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="v22b4d228e0485d06e31a13490ab72fd8" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="fb9f6be0be151da707c12a28eb99c8bb3 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="fb9f6be0be151da707c12a28eb99c8bb3 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google fb9f6be0be151da707c12a28eb99c8bb3-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter fb9f6be0be151da707c12a28eb99c8bb3" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook af6e4e606a0350bd9316d0d51b94570fa" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="af6e4e606a0350bd9316d0d51b94570fa pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google af6e4e606a0350bd9316d0d51b94570fa-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter af6e4e606a0350bd9316d0d51b94570fa" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
