--- a/sitemap.html
+++ b/sitemap.html
@@ -18,38 +18,23 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-footer{
-background:#0b0b0b;
-color:#ffffff;
-}
-ul{
-list-style: circle;
-}
-.de402b6383f7e32c45ea64c05634377aa a{
-font-size:16px;
-}
-.btn-md{
-padding: 15px 29.9px;
-border-radius: 0;
-}
-.tb6e8d90a065ba11fcfbb0539cca36d41:hover{
-box-shadow: 0 49.5px 50.2px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
 a{
 text-decoration: none!important;
 }
-.df5c8cef9dbde9edbfe4dc9c60de130a3 a,.de402b6383f7e32c45ea64c05634377aa a{
-color:#0d0d0d!important;
-text-decoration: underline !important;
+footer *{
+font-size:16px !important;
 }
-.de402b6383f7e32c45ea64c05634377aa p,.de402b6383f7e32c45ea64c05634377aa span,.de402b6383f7e32c45ea64c05634377aa label{
-font-size:16px!important;
+.d2f8174d177fc3a30b4dc5ff70bd29789 a{
+font-size:16px;
+}
+.x0b3374ec61374a45a46f03e247c1c4f9 a,.d2f8174d177fc3a30b4dc5ff70bd29789 a{
+color:#121212!important;
+text-decoration: underline !important;
 }
 *{
 font-family: 'Kumbh Sans', sans-serif;
 }
-.xe9a459aaf26ad487ddee0b0b2ed0265c{
+.bf6ec8534e0ab34c5cce37a043d3ed145{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
@@ -57,55 +42,70 @@ color:#000000!important;
 html{
 scroll-behavior: smooth;
 }
+footer{
+background:#000000;
+color:#ffffff;
+}
+.d2f8174d177fc3a30b4dc5ff70bd29789 p,.d2f8174d177fc3a30b4dc5ff70bd29789 span,.d2f8174d177fc3a30b4dc5ff70bd29789 label{
+font-size:16px!important;
+}
+ul{
+list-style: circle;
+}
 .navbar a{
 font-size: 17.6px!important;
 font-weight: bold;
-}
-.df5c8cef9dbde9edbfe4dc9c60de130a3 p,.df5c8cef9dbde9edbfe4dc9c60de130a3 a,.df5c8cef9dbde9edbfe4dc9c60de130a3 span,.df5c8cef9dbde9edbfe4dc9c60de130a3 label{
-font-size:16px!important;
-}
-footer *{
-font-size:16px !important;
-}
-.nav-item{
-padding-left:8.3px;
-padding-right:8.2px;
-padding-top:4.5px;
-padding-bottom:4.9px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
+.nav-item{
+padding-left:8.5px;
+padding-right:7.8px;
+padding-top:4.9px;
+padding-bottom:4.8px;
+}
+.x0b3374ec61374a45a46f03e247c1c4f9 p,.x0b3374ec61374a45a46f03e247c1c4f9 a,.x0b3374ec61374a45a46f03e247c1c4f9 span,.x0b3374ec61374a45a46f03e247c1c4f9 label{
+font-size:16px!important;
+}
+.y5b7c01819d56559901e89067fc9afc55:hover{
+box-shadow: 0 49.8px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
 .nav-link{
 color: #000000!important;
 
 }
+.btn-md{
+padding: 15px 30.1px;
+border-radius: 0;
+}
 </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar-expand-lg navbar">
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex align-items-center ml-auto navbar-nav"><li class="nav-item">
-<a class="z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="align-items-center ml-auto navbar-nav d-flex"><li class="nav-item">
+<a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle z7c7f9d39dc2cbdeb36269e6e65d9268a nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-toggle fe426a156acfe108dbf7572bec07eb5e9 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link z7c7f9d39dc2cbdeb36269e6e65d9268a" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link fe426a156acfe108dbf7572bec07eb5e9" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -137,19 +137,19 @@ color: #000000!important;
 <div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="z7c7f9d39dc2cbdeb36269e6e65d9268a" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="fe426a156acfe108dbf7572bec07eb5e9" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="f0a113b7446d9e6d718af07540daa3ce5 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest f0a113b7446d9e6d718af07540daa3ce5" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="f0a113b7446d9e6d718af07540daa3ce5 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="f0a113b7446d9e6d718af07540daa3ce5 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook we3f287e33834045de45f46467e75ab50" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest we3f287e33834045de45f46467e75ab50" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google we3f287e33834045de45f46467e75ab50-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="we3f287e33834045de45f46467e75ab50 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
