--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-link{
-color: #000000!important;
-
-}
-footer{
-background:#000000;
-color:#ffffff;
-}
-.z2f2db86abefb709b5ef3e59e8d43c450 a{
-font-size:16px;
-}
-.c86f3fc6b937e1ff30f2be25c3eb510b1 p,.c86f3fc6b937e1ff30f2be25c3eb510b1 a,.c86f3fc6b937e1ff30f2be25c3eb510b1 span,.c86f3fc6b937e1ff30f2be25c3eb510b1 label{
-font-size:16px!important;
-}
-.navbar a{
-font-size: 18px!important;
-font-weight: bold;
-}
-.nav-item{
-padding-left:7.7px;
-padding-right:8.5px;
-padding-top:5.5px;
-padding-bottom:4.9px;
-}
-.f058136a709cfa870d51ce53bb0773910:hover{
-box-shadow: 0 50.2px 50.4px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-html{
-scroll-behavior: smooth;
-}
-a{
-text-decoration: none!important;
+.btn-md{
+padding: 14.7px 30.1px;
+border-radius: 0;
 }
 footer *{
 font-size:16px !important;
 }
-ul{
-list-style: circle;
-}
-.c86f3fc6b937e1ff30f2be25c3eb510b1 a,.z2f2db86abefb709b5ef3e59e8d43c450 a{
-color:#0e0e0e!important;
+.z84001ebd4d51432dbb51271b5abe9d9c a,.e053376f35e20a7e8e3cbae6f0e7f246d a{
+color:#060606!important;
 text-decoration: underline !important;
 }
-.btn-md{
-padding: 15px 30.1px;
-border-radius: 0;
+a{
+text-decoration: none!important;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.z2f2db86abefb709b5ef3e59e8d43c450 p,.z2f2db86abefb709b5ef3e59e8d43c450 span,.z2f2db86abefb709b5ef3e59e8d43c450 label{
+.z84001ebd4d51432dbb51271b5abe9d9c p,.z84001ebd4d51432dbb51271b5abe9d9c a,.z84001ebd4d51432dbb51271b5abe9d9c span,.z84001ebd4d51432dbb51271b5abe9d9c label{
 font-size:16px!important;
+}
+.nav-item{
+padding-left:8.1px;
+padding-right:8.4px;
+padding-top:5.2px;
+padding-bottom:4.5px;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-.we10605b53c74800c7a6bae324a3530fd{
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.e053376f35e20a7e8e3cbae6f0e7f246d p,.e053376f35e20a7e8e3cbae6f0e7f246d span,.e053376f35e20a7e8e3cbae6f0e7f246d label{
+font-size:16px!important;
+}
+.d10020e11188afaa5def03a32f634c2fe:hover{
+box-shadow: 0 50.2px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.navbar a{
+font-size: 17.6px!important;
+font-weight: bold;
+}
+html{
+scroll-behavior: smooth;
+}
+.x3f56cd007c2eb1f2e645fb08d6f07e5b{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
+}
+footer{
+background:#060606;
+color:#ffffff;
+}
+.nav-link{
+color: #000000!important;
+
+}
+.e053376f35e20a7e8e3cbae6f0e7f246d a{
+font-size:16px;
+}
+ul{
+list-style: circle;
 }
 </style>
 </head>
@@ -89,24 +89,24 @@ color:#000000!important;
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
-<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="index.html" >plumbing quotes</a>
+<ul class="ml-auto d-flex navbar-nav align-items-center"><li class="nav-item">
+<a class="y2a30c3a7363b62cb567e13b0127919d5 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="c1d9950f9b8e80714ec7e05bae8b2b960 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="y2a30c3a7363b62cb567e13b0127919d5 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="dropdown-toggle nav-link c1d9950f9b8e80714ec7e05bae8b2b960" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="nav-link dropdown-toggle y2a30c3a7363b62cb567e13b0127919d5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link c1d9950f9b8e80714ec7e05bae8b2b960" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="py-4 pt-5 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="c1d9950f9b8e80714ec7e05bae8b2b960" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="y2a30c3a7363b62cb567e13b0127919d5" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook x86674ba3e567d7f5976d6c604ffd178f" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="x86674ba3e567d7f5976d6c604ffd178f pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google x86674ba3e567d7f5976d6c604ffd178f-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="x86674ba3e567d7f5976d6c604ffd178f twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="u2e70ac31ef6253da8d8e414603355df7 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="u2e70ac31ef6253da8d8e414603355df7 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google u2e70ac31ef6253da8d8e414603355df7-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter u2e70ac31ef6253da8d8e414603355df7" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
