--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.btn-md{
-padding: 14.7px 30.1px;
-border-radius: 0;
+.nav-link{
+color: #000000!important;
+
 }
-footer *{
-font-size:16px !important;
-}
-.z84001ebd4d51432dbb51271b5abe9d9c a,.e053376f35e20a7e8e3cbae6f0e7f246d a{
-color:#060606!important;
-text-decoration: underline !important;
-}
-a{
-text-decoration: none!important;
-}
-.z84001ebd4d51432dbb51271b5abe9d9c p,.z84001ebd4d51432dbb51271b5abe9d9c a,.z84001ebd4d51432dbb51271b5abe9d9c span,.z84001ebd4d51432dbb51271b5abe9d9c label{
+.u7595ff50ea318d11ea15a3869066465f p,.u7595ff50ea318d11ea15a3869066465f span,.u7595ff50ea318d11ea15a3869066465f label{
 font-size:16px!important;
 }
-.nav-item{
-padding-left:8.1px;
-padding-right:8.4px;
-padding-top:5.2px;
-padding-bottom:4.5px;
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.u7595ff50ea318d11ea15a3869066465f a{
+font-size:16px;
+}
+.btn-md{
+padding: 14.6px 29.5px;
+border-radius: 0;
+}
+footer{
+background:#090909;
+color:#ffffff;
+}
+.u3118f06dadda8ed1daf67e3d2da8b506 p,.u3118f06dadda8ed1daf67e3d2da8b506 a,.u3118f06dadda8ed1daf67e3d2da8b506 span,.u3118f06dadda8ed1daf67e3d2da8b506 label{
+font-size:16px!important;
+}
+.fc2340a573a973b0d36dbb28b2014b713:hover{
+box-shadow: 0 50.5px 49.5px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.e053376f35e20a7e8e3cbae6f0e7f246d p,.e053376f35e20a7e8e3cbae6f0e7f246d span,.e053376f35e20a7e8e3cbae6f0e7f246d label{
-font-size:16px!important;
-}
-.d10020e11188afaa5def03a32f634c2fe:hover{
-box-shadow: 0 50.2px 49.9px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
 .navbar a{
-font-size: 17.6px!important;
+font-size: 18.4px!important;
 font-weight: bold;
 }
-html{
-scroll-behavior: smooth;
+ul{
+list-style: circle;
 }
-.x3f56cd007c2eb1f2e645fb08d6f07e5b{
+.y995fb0d44fbc15fb2b576502bdffdf4b{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-footer{
-background:#060606;
-color:#ffffff;
+.u3118f06dadda8ed1daf67e3d2da8b506 a,.u7595ff50ea318d11ea15a3869066465f a{
+color:#070707!important;
+text-decoration: underline !important;
 }
-.nav-link{
-color: #000000!important;
-
+a{
+text-decoration: none!important;
 }
-.e053376f35e20a7e8e3cbae6f0e7f246d a{
-font-size:16px;
+footer *{
+font-size:16px !important;
 }
-ul{
-list-style: circle;
+.nav-item{
+padding-left:7.5px;
+padding-right:8.1px;
+padding-top:4.7px;
+padding-bottom:5.2px;
+}
+html{
+scroll-behavior: smooth;
 }
 </style>
 </head>
@@ -89,24 +89,24 @@ list-style: circle;
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="ml-auto d-flex navbar-nav align-items-center"><li class="nav-item">
-<a class="y2a30c3a7363b62cb567e13b0127919d5 nav-link" href="index.html" >plumbing quotes</a>
+<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
+<a class="nav-link z4bf28431cf2b533680f1c2bd45313d7a" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link z4bf28431cf2b533680f1c2bd45313d7a" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="y2a30c3a7363b62cb567e13b0127919d5 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link dropdown-toggle y2a30c3a7363b62cb567e13b0127919d5" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="z4bf28431cf2b533680f1c2bd45313d7a dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link y2a30c3a7363b62cb567e13b0127919d5" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="z4bf28431cf2b533680f1c2bd45313d7a nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="py-4 pt-5 container" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="y2a30c3a7363b62cb567e13b0127919d5" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="y2a30c3a7363b62cb567e13b0127919d5" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="z4bf28431cf2b533680f1c2bd45313d7a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="z4bf28431cf2b533680f1c2bd45313d7a" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="u2e70ac31ef6253da8d8e414603355df7 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="u2e70ac31ef6253da8d8e414603355df7 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google u2e70ac31ef6253da8d8e414603355df7-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter u2e70ac31ef6253da8d8e414603355df7" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="t3ff7deaf904d158781a5e27509563b58 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="t3ff7deaf904d158781a5e27509563b58 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google t3ff7deaf904d158781a5e27509563b58-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter t3ff7deaf904d158781a5e27509563b58" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
